Added content to 'How it Works' section in index.html and styled the 'How it Works' section in styles.css

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -17,6 +17,14 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+.clearfix {zoom: 1}
+.clearfix:after {
+    content: '.';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
 
 /*----------------------------------------------------------------------------------------------------------------------------------------------*/
 /* REUSABLE COMPONENTS */
@@ -24,12 +32,12 @@ html {
 
 .row {
     max-width: 1140px;
-    margin: auto auto;  /* shorthand for making top and bottom margin 0 while making left and right margin center */
+    margin: 0 auto;  /* shorthand for making top and bottom margin 0 while making left and right margin center */
 }
 
 /* Adding padding to top of section to create white space */
 section {
-    padding: 80px 0px;
+    padding: 80px 0;
 }
 
 .box {
@@ -58,6 +66,7 @@ h2 {
     margin-bottom: 30px;
 }
 
+/* Displaying orange bar seperating title of section from content of section */
 h2:after {
     display: block;
     height: 2px;
@@ -235,5 +244,54 @@ Meals
 
 .meal-photo img:hover {
     opacity: 1;
-    transform: scale(1.05);
+    transform: scale(1.03);
+}
+
+/* How it works */
+
+.section-steps {
+    background-color: #f4f4f4;
+}
+
+.steps-box:first-child {
+    text-align: right;
+    padding-right: 3%;
+    margin-top: 30px;
+}
+
+.steps-box:last-child {
+    padding-left: 3%;
+    margin-top:  70px;
+}
+
+.app-screen {
+    width: 40%;
+}
+
+.works-step {
+    margin-bottom: 50px;
+}
+
+.works-step:last-of-type {
+    margin-bottom: 80px;
+}
+
+.works-step div {
+    color: #e67e22;
+    border: 2px solid #e67e22;
+    display: inline-block;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    padding: 5px;
+    float: left;
+    font-size: 150%;
+    margin-right: 25px;
+}
+
+.btn-app img {
+    height: 50px;
+    width: auto;
+    margin-right: 10px;
 }
