--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -115,6 +115,21 @@ header {
     height: 100vh;    
 }
 
+a:link,
+a:visited {
+    color: #e67e22;
+    text-decoration: none;
+    border-bottom: 1px solid #e67e22;
+    padding-bottom: 1px;
+    transition: border-bottom 0.5s, color 0.25;
+}
+
+a:hover,
+a:active {
+    color: #555;
+    border-bottom: 1px solid transparent;
+}
+
 /* ---- BUTTONS ----- */
 .btn:link,
 .btn:visited {
@@ -293,5 +308,35 @@ Meals
 .btn-app img {
     height: 50px;
     width: auto;
+    margin-right: 10px;
+}
+
+.btn-app:link,
+.btn-app:visited {
+  border: 0; 
+}
+
+/* CITIES */
+.box img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+}
+
+.city-feature {
+    margin-bottom: 5px;
+}
+
+.icon-small {
+    display: inline-block;
+    width: 30px;
+    color: #e67e22;
+    text-align: center;
+    font-size: 120%;
+    
+    /* secre to align text and icons */
+    line-height: 120%;
+    vertical-align: middle;
+    margin-top: -6px;
     margin-right: 10px;
 }
