--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -113,6 +113,7 @@ header {
     background-position: center;
     /* make image fill the entire view port */
     height: 100vh;    
+    background-attachment: fixed;   /* Keeping background image stationary as user scrolls through page */
 }
 
 a:link,
@@ -339,4 +340,44 @@ Meals
     vertical-align: middle;
     margin-top: -6px;
     margin-right: 10px;
+}
+
+/* TESTIMONIALS */
+
+.section-testimonials {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
+    background-size: cover; 
+    color: #fff;
+    background-attachment: fixed;
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative; /* This element must be relative so that its child (blockquote:before) can be absolutately positioned. */
+    margin-top: 40px;
+}
+
+blockquote:before {
+    content: "\201c";   /* adding quotation at begining of the blockquote */      
+    font-size: 500%;    /* Making the size of the quotation 500% */ 
+    display: block;     /* Making the text align to the left */
+    display: absolute;  /* parent element (which is blockqoute) must be relative position for this to work */
+    top: -5;            /* Positioning the quotation */
+    left: -5;           /* Positioning the quotation */
+}
+
+cite {
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+}
+
+
+cite img {
+    height: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
 }
