--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -5,6 +5,7 @@
 * {
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -15,6 +16,11 @@ html {
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
+    overflow-x: hidden;
+}
+
+body {
+    overflow-x: hidden;
 }
 
 .clearfix {zoom: 1}
@@ -107,6 +113,7 @@ h3 {
 /* ---- HEADINGS ----- */
 header {
     /* setting background image and setting a black overlay to make image slightly darker. This will help with contrast needed for the text*/
+    background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0, 0, 0, 0.7)),to(rgba(0, 0, 0, 0.7))), url("img/hero.jpg");
     background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)), url("img/hero.jpg");
     /* changing size of image so pic looks correct in browser*/
     background-size: cover;
@@ -122,6 +129,7 @@ a:visited {
     text-decoration: none;
     border-bottom: 1px solid #e67e22;
     padding-bottom: 1px;
+    -webkit-transition: border-bottom 0.5s, color 0.25;
     transition: border-bottom 0.5s, color 0.25;
 }
 
@@ -133,17 +141,20 @@ a:active {
 
 /* ---- BUTTONS ----- */
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit]{
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
     text-decoration: none;
     border-radius: 200px;
+    -webkit-transition: background-color .5s, border .5s, color .5s;
     transition: background-color .5s, border .5s, color .5s;
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit]{
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
@@ -157,12 +168,15 @@ a:active {
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active{
     background-color: #cf6d17;
 }
 
 .btn-full:hover,
-.btn-full:active {
+.btn-full:active,
+input[type=submit]{
     border: 1px solid #cf6d17;
 }
 
@@ -181,6 +195,7 @@ a:active {
     width: 1140px;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
 }
 
@@ -190,6 +205,16 @@ a:active {
     float: left;
     margin-top: 20px;
 }
+
+.logo-black {
+    display: none;
+    height: 50px;
+    width: auto;
+    float: left;
+    margin: 5px 0;
+}
+
+.logo-black { display: none; } /* Black logo is hidden in default state */
 
 .main-nav {    
     float: right;
@@ -209,6 +234,7 @@ a:active {
     text-transform: uppercase;
     font-size: 90%;
     border-bottom: 2px solid transparent;    
+    -webkit-transition: border-bottom .5s;    
     transition: border-bottom .5s;
     padding: 8px 0px;
 }
@@ -217,6 +243,26 @@ a:active {
 .main-nav li a:active {
     border-bottom: 2px solid #e67e22;    
 }
+
+/* STICKY NAVIGATOR */
+.sticky {
+    position: fixed; /* Navigation stays at same point when scrolling */
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255,255,255,0.8);
+    box-shadow: 0 2px 2px #e4e1e1;
+}
+
+.main-nav { margin-top: 18px; }
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    padding: 16px 0;
+    color: #555;
+}
+
+.sticky .logo { display: none; }
+.sticky .logo-black { display: block; }
 
 /*
 Features
@@ -254,12 +300,17 @@ Meals
     opacity: 0.7;
     width: 100%;
     height: auto;
+    -webkit-transform: scale(1.15);
     transform: scale(1.15);
+    -webkit-transition: opacity 0.5s , -webkit-transform 0.5s;
+    transition: opacity 0.5s , -webkit-transform 0.5s;
     transition: transform 0.5s , opacity 0.5s;
+    transition: transform 0.5s , opacity 0.5s , -webkit-transform 0.5s;
 }
 
 .meal-photo img:hover {
     opacity: 1;
+    -webkit-transform: scale(1.03);
     transform: scale(1.03);
 }
 
@@ -345,6 +396,7 @@ Meals
 /* TESTIMONIALS */
 
 .section-testimonials {
+    background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0, 0, 0, 0.8)),to(rgba(0, 0, 0, 0.8))), url(img/back-customers.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
     background-size: cover; 
     color: #fff;
@@ -393,6 +445,7 @@ cite img {
     border-radius: 5px;
     width: 90%;
     margin-left: 5%;
+    -webkit-box-shadow: 0 2px 2px #efefef;
     box-shadow: 0 2px 2px #efefef; 
 }
 
@@ -433,5 +486,116 @@ cite img {
 }
 
 .plan-box ul li {
-    padding: 5px o;
+    padding: 5px 0;
 }
+
+/* FORM */
+
+.contact-form {
+    width: 60%;
+    margin: 0 auto; /* centering contact form inside parent element */
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+textarea {
+    height: 100px;  /* setting height of the textarea */
+}
+
+input[type=checkbox]{
+    margin: 10px 5px 10px 0; /* adding white space around the checkbox */
+}
+
+*:focus {outline: none;}
+
+/* FOOTER */ 
+footer {
+    background-color: #333;
+    padding: 50px;
+    font-size: 80%;
+}
+
+.footer-nav {
+    list-style: none; /* Remove bullet points for site navigation*/
+    float: left;
+}
+
+.social-links {
+    list-style: none; /* Remove bullet points for social navigation*/
+    float: right;
+}
+
+.footer-nav li,
+.social-links li {
+    display: inline-block; /* Display all nav links for site and social on same line */
+    margin-right: 20px; /* Assign 20 pixels between each nav link for site and social navigation links */
+}
+   
+.footer-nav li:last-child,
+.social-links li:last-child {
+    margin-right: 0;    /* Removing extra right margin for the last navigation for both site and social navigations. */
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited, 
+.social-links li a:link,
+.social-links li a:visited {
+    text-decoration: none;
+    border: 0; /* Removing any border from the site and social navigation links */              
+    color: #888; /* Setting default color for the links */
+    -webkit-transition: color 0.5s;
+    transition: color 0.5s; /* changing the color when hovering over links */
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+    color: #ddd; /* Setting color the links will turn to when hovered over */
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+    font-size: 160%; /* Setting default font size for social media icon links */
+}
+
+.ion-social-facebook,
+.ion-social-twitter,
+.ion-social-googleplus,
+.ion-social-instagram {
+    -webkit-transition: color 0.2s;
+    transition: color 0.2s;
+}
+
+/* Setting transition color for Facebook icon link */
+.ion-social-facebook:hover {
+    color: #3b5998;
+}
+
+/* Setting transition color for Twitter icon link */
+.ion-social-twitter:hover {
+    color: #00aced;
+}
+
+/* Setting transition color for Google Plus icon link */
+.ion-social-googleplus:hover {
+    color: #dd4b39;
+}
+
+/* Setting transition color for Instagram icon link */
+.ion-social-instagram:hover {
+    color: #517fa4;
+}
+
+footer p {
+    color: #888; /* Setting font color for copyright */
+    text-align: center; /* Aligning the copyright message */
+    margin-top: 20px; /* Increasing space between links and copyright message */ 
+}
+
